[tool.poetry]
name = "surprisal"
version = "0.1.6"
description = "A package to conveniently compute surprisals for text sequences and subsequences"
readme = "README.md"
homepage = "https://github.com/aalok-sathe/surprisal"
repository = "https://github.com/aalok-sathe/surprisal"
authors = ["aalok-sathe <asathe@mit.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.1"
plotext = "^5.0.2"
matplotlib = "^3.5.2"
torch = {version = "^2.0.0", optional = true}
transformers = {version = "^4.20.1", optional = true}
openai = {version = "^0.23.0", optional = true}
kenlm = {version = "^0.2.0", optional = true}


[tool.poetry.extras]
transformers = ["transformers", "torch"]
openai = ["openai"]
kenlm = ["kenlm"]


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.docs.dependencies]
pdoc = "^14.1.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.4.0"
ipykernel = "^6.15.1"
ipywidgets = "^7.7.1"
pytest = "^7.2.0"
black = "^22.6.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
