[project]
authors = [
    {name = "aalok-sathe", email = "asathe@mit.edu"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.9"
dependencies = [
    "numpy>=1.23.1",
    "plotext<6.0.0,>=5.0.2",
    "matplotlib>=3.5.2",
]
name = "surprisal"
version = "0.1.7"
description = "A package to conveniently compute surprisals for text sequences and subsequences"
readme = "README.md"


[project.urls]
homepage = "https://github.com/aalok-sathe/surprisal"
repository = "https://github.com/aalok-sathe/surprisal"

[project.optional-dependencies]
transformers = [
    "torch>=2.5.1",
    "transformers>=4.34.1",
]
kenlm = [
    "kenlm>=0.3.0",
]
petals = [
    "petals>=2.2.0.post1",
]
all = [
    "kenlm>=0.3.0",
    "petals>=2.2.0.post1",
    "torch>=2.5.1",
    "transformers>=4.34.1",
]

[dependency-groups]
docs = [
    "pdoc<15.0.0,>=14.1.0",
    "pylint<4.0.0,>=3.0.2",
    "pylint-exit<2.0.0,>=1.2.0",
    "pylint-json2html<1.0.0,>=0.5.0",
]
dev = [
    "ipython<9.0.0,>=8.4.0",
    "ipykernel<7.0.0,>=6.15.1",
    "ipywidgets<8.0.0,>=7.7.1",
    "pytest<8.0.0,>=7.2.0",
    "black<23.0.0,>=22.6.0",
]
transformers = [
    "torch>=2.5.1",
    "transformers>=4.34.1",
]

[tool.pdm.build]
includes = []

[tool.uv.sources]
surprisal = { workspace = true }
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


